log
Wed 24 Apr 2024 05:55:27 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:10: error: unused variable ‘newArray’ [-Werror=unused-variable]
   71 |   Pair** newArray = (Pair**)malloc(newCapacity * sizeof(Pair**));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50feaef
Wed 24 Apr 2024 05:56:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c9474f
